tests/neg/i11544.check
-- [E051] Reference Error: tests/neg/i11544.scala:6:13 -----------------------------------------------------------------
6 |  val n = m1.foo(23)  // error
  |          ^^^^^^
  |          Ambiguous overload. The overloaded alternatives of method (str: String, int: Int): Int with types
  |
  |           <none>(str: String, int: Int): Int
  |
  |           <none>(arg: Int): Int
  |
  |          both match arguments ((23 : Int))
  |
  |          Note: Overloaded definitions introduced by refinements cannot be resolved
  |
  | longer explanation available when compiling with `-explain`
